--- a/AnthemAPI.csproj
+++ b/AnthemAPI.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.2.2" />
     <PackageReference Include="AWSSDK.ApiGatewayManagementApi" Version="3.7.400.68" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.403.8" />
+    <PackageReference Include="AWSSDK.SSO" Version="3.7.400.68" />
+    <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.400.68" />
     <PackageReference Include="Quartz.AspNetCore" Version="3.13.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
