--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,14 +69,14 @@ jobs:
     needs: build-and-push-image
     runs-on: ubuntu-latest
     steps:
-      - name: Update the ec2 instance
+      - name: Update the EC2 instance
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           HOST: ${{ secrets.HOST }}
           USER: ${{ secrets.USER }}
           ANTHEM_PAT: ${{ secrets.ANTHEM_PAT }}
           VERSION: ${{ needs.build-and-push-image.outputs.version }}
-          IMAGE_NAME: ghcr.io/anthem-social/anthemapi:${VERSION}
+          IMAGE_NAME: ghcr.io/anthem-social/anthemapi:${{ needs.build-and-push-image.outputs.version }}
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           echo "Updating to image name: ${IMAGE_NAME}"
@@ -100,7 +100,7 @@ jobs:
         run: rm -f private_key
     outputs:
       version: ${{ needs.build-and-push-image.outputs.version }}
-    
+
   create-tag-and-release:
     needs: update-ec2
     runs-on: ubuntu-latest
