--- a/AnthemAPI.csproj
+++ b/AnthemAPI.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.403.8" />
     <PackageReference Include="AWSSDK.SSO" Version="3.7.400.68" />
     <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.400.68" />
+    <PackageReference Include="LocalStack.Client" Version="1.5.0" />
+    <PackageReference Include="LocalStack.Client.Extensions" Version="1.3.0" />
     <PackageReference Include="Quartz.AspNetCore" Version="3.13.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
